--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+assets:
+  images/haircut.jpg
+  images/shave.jpg
+  images/haircolor.jpg
+  images/facecare.jpg
+  images/massage.jpg
+  images/logo.jpg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
